# green-scheduling-bab

./: AUTHORS  AUTHORS.txt  README.md
Iirc.EnergyStatesAndCostsScheduling/: .gitignore  Iirc.EnergyStatesAndCostsScheduling.sln
Iirc.EnergyStatesAndCostsScheduling/ExampleGenerator/: ExampleGenerator.csproj  Program.cs  candidates.txt
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.DatasetGenerators/: CmdOptions.cs  Iirc.EnergyStatesAndCostsScheduling.DatasetGenerators.csproj  Prescription.cs  Program.cs
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.DatasetGenerators/EnergyCosts/: EnergyCostsProviderKind.cs  FileEnergyCostsProvider.cs  UniformEnergyCostsProvider.cs
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.DatasetGenerators/Generators/: Aghelinejad2017a.cs  Benedikt2020a.cs  Benedikt2020b.cs  Benedikt2020b_2.cs
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Experiments/: .gitignore  CmdOptions.cs  Iirc.EnergyStatesAndCostsScheduling.Experiments.csproj  Prescription.cs  PrescriptionSolverConfig.cs  Program.cs  SolverPrescription.cs
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/: .gitignore  Iirc.EnergyStatesAndCostsScheduling.Shared.csproj
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/modules/: FindCPLEX.cmake  FindGUROBI.cmake
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/algorithms/: BlockFinding.cpp  BlockFinding.h  PackToBlocksByCp.cpp  PackToBlocksByCp.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/datastructs/: Block.h  FixedPermCostComputation.cpp  FixedPermCostComputation.h  GcdOfValues.cpp  GcdOfValues.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/input/: Instance.cpp  Instance.h  Interval.cpp  Interval.h  Job.cpp  Job.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/input/readers/: CppInputReader.cpp  CppInputReader.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/openga/: openGA.hpp
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/output/: Result.cpp  Result.h  Status.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/solvers/: BranchAndBoundJob.cpp  BranchAndBoundJob.h  ConstructiveHeuristic.cpp  ConstructiveHeuristic.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  SolverConfig.cpp  SolverConfig.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Shared/cpp/src/utils/: Stopwatch.cpp  Stopwatch.h
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.SolverCli/: .gitignore  CmdOptions.cs  Config.cs  Iirc.EnergyStatesAndCostsScheduling.SolverCli.csproj  Program.cs  config.json
Iirc.EnergyStatesAndCostsScheduling/Iirc.EnergyStatesAndCostsScheduling.Tests/: Iirc.EnergyStatesAndCostsScheduling.Tests.csproj
Iirc.EnergyStatesAndCostsScheduling/data/: LICENSE.txt
Iirc.Utils/: Iirc.Utils.sln
Iirc.Utils.Gurobi/: Iirc.Utils.Gurobi.sln  LICENSE.txt
Iirc.Utils.Gurobi/Iirc.Utils.Gurobi/: GurobiExtensions.cs  Iirc.Utils.Gurobi.csproj
Iirc.Utils/Iirc.Utils/: Iirc.Utils.csproj
Iirc.Utils/Iirc.Utils.Tests/: Iirc.Utils.Tests.csproj
Iirc.Utils/Iirc.Utils.Tests/Text/: StringExtensionsTests.cs
(+109 files in other folders)
